Fixed screen overflowing

--- a/styles/style.css
+++ b/styles/style.css
@@ -46,7 +46,7 @@ body {
 .top-line {
     font-size: 22px;
     color: rgb(128, 128, 128);
-    min-height: 35px;
+    min-height: 52px;
 }
 
 .bottom-line {
